--- a/ambient-background-color/index.html
+++ b/ambient-background-color/index.html
@@ -18,6 +18,7 @@
         bottom: 0;
       }
       .wrapper img {
+        cursor: pointer;
         max-width: 90%;
         max-height: 90%;
         position: absolute;
