--- a/ambient-background-color/index.html
+++ b/ambient-background-color/index.html
@@ -60,8 +60,11 @@
         var color = colorThief.getColor(sourceImage);
         var wrapper = document.getElementsByClassName("wrapper")[0];
         wrapper.style["background-color"] = toRGB(color);
-        var colors = colorThief.getPalette(sourceImage, 3);
-        wrapper.style["background-image"] = "linear-gradient(45deg, " + toRGB(colors[0]) + ", " + toRGB(colors[1]) + ", " + toRGB(colors[0]) + ")";
+        var colors = colorThief.getPalette(sourceImage, 4);
+        var gradient = "linear-gradient(117deg, " + colors.map(function (color) {
+          return toRGB(color);
+        }) + ")";
+        wrapper.style["background-image"] = gradient;
       }
     </script>
   </body>
